--- a/info.html
+++ b/info.html
@@ -66,7 +66,7 @@ a:active {
       <td width="144"><div align="center"><a href="https://www.youtube.com/user/mikeywinsor"><img src="icon-youtube.png" width="60" height="60" class="icon"/></a></div></td>
     </tr>
     <tr>
-      <td><div align="center">info (@) mikeywinsor . com</div></td>
+      <td><div align="center">my name (@) gmail . com</div></td>
       <td><div align="center"><font size="-1"><a href="https://www.instagram.com/mikeywinsor/" target="_new">instagram</a></font></div></td>
       <td><div align="center"><font size="-1"><a href="https://www.patreon.com/mikeywinsor" target="_new">patreon</a></font></div></td>
       <td><div align="center"><font size="-1"><a href="https://www.youtube.com/user/mikeywinsor" target="_new">youtube</a></font></div></td>
@@ -79,44 +79,37 @@ a:active {
   <table width="832" height="376" border="0" cellpadding="5" cellspacing="4">
     <tbody>
       <tr>
-        <td width="326" rowspan="34"><p>Education:</p>
+        <td width="326" rowspan="33"><p>Education:</p>
           <p>2012 MFA University of Pennsylvania<br />
             <br />
             2009 BA Georgia Southern University       
         </p>          <p>&nbsp;</p></td>
           <td>&nbsp;</td>
-          <td height="23">Current &amp; Upcoming Exhibitions</td>
-      </tr>
-      <tr>
-        <td>Oct 7 -<br />
-          Nov 5</td>
-          <td height="23">PRHBTN 2022<br />
-Loudoun House, Lexington, KY</td>
-      </tr>
-      <tr>
-        <td>Nov 18 -<br />
-          Jan 6</td>
-        <td height="23">Lexington Art League Members Show<br />
-Loudoun House, Lexington, KY</td>
+          <td>Current &amp; Upcoming Exhibitions</td>
       </tr>
       <tr>
         <td>Dec-Jan</td>
-        <td height="23">Small Matters<br />
+        <td>Small Matters<br />
         437Co Art Gallery, <br />
         Colorado Mesa Univesrsity, 
         Grand Junction, CO</td>
       </tr>
       <tr>
         <td>&nbsp;</td>
-        <td>&nbsp;</td>
+        <td>Select Shows and Awards:</td>
       </tr>
       <tr>
-        <td>&nbsp;</td>
-        <td height="23"></br>
-Select Shows and Awards:</td>
+        <td>2023</td>
+        <td height="23">Lexington Art League Members Show<br />
+          Loudoun House, Lexington, KY</td>
       </tr>
       <tr>
         <td>2022</td>
+        <td height="23">PRHBTN 2022<br />
+          Loudoun House, Lexington, KY</td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
         <td><p>Carried by Wind, solo exhibition<br />
         Ludoun House, Lexington KY</p></td>
       </tr>
@@ -136,7 +129,8 @@ Marshall University, Huntington, WV</td>
       <tr>
         <td>2021</td>
         <td>Team Kentucky<br />
-Kentucky State Capitol 700 Capitol Avenue Frankfort</td>
+Kentucky State Capitol,<br />
+Frankfort, KY</td>
       </tr>
       <tr>
         <td>&nbsp;</td>
