--- a/info.html
+++ b/info.html
@@ -58,17 +58,19 @@ a:active {
 
 <body>
 <div align="center">
-  <table width="658" border="0" cellspacing="2" cellpadding="2">
+  <table width="824" border="0" cellspacing="2" cellpadding="2">
     <tr>
       <td width="248"><div align="center"><img src="icon-email.png" width="60" height="60" class="icon" /></div></td>
       <td width="128"><div align="center"><a href="https://www.instagram.com/mikeywinsor/" target="_new"><img src="icon-instagram.png" width="60" height="60" class="icon" /></a></div></td>
       <td width="128"><div align="center"><a href="https://www.patreon.com/mikeywinsor" target="_new"><img src="icon-patreon.png" width="60" height="60" class="icon" /></a></div></td>
+      <td width="128"><div align="center"><a href="https://donutthief.etsy.com" target="_new"><img src="icon-shop.png" width="60" height="60" class="icon" /></a></div></td>
       <td width="144"><div align="center"><a href="https://www.youtube.com/user/mikeywinsor"><img src="icon-youtube.png" width="60" height="60" class="icon"/></a></div></td>
     </tr>
     <tr>
       <td><div align="center">my name (@) gmail . com</div></td>
       <td><div align="center"><font size="-1"><a href="https://www.instagram.com/mikeywinsor/" target="_new">instagram</a></font></div></td>
       <td><div align="center"><font size="-1"><a href="https://www.patreon.com/mikeywinsor" target="_new">patreon</a></font></div></td>
+      <td><div align="center"><font size="-1"><a href="https://donutthief.etsy.com" target="_new">shop</a></font></div></td>
       <td><div align="center"><font size="-1"><a href="https://www.youtube.com/user/mikeywinsor" target="_new">youtube</a></font></div></td>
     </tr>
   </table>
@@ -79,7 +81,7 @@ a:active {
   <table width="832" height="376" border="0" cellpadding="5" cellspacing="4">
     <tbody>
       <tr>
-        <td width="326" rowspan="33"><p>Education:</p>
+        <td width="326" rowspan="35"><p>Education:</p>
           <p>2012 MFA University of Pennsylvania<br />
             <br />
             2009 BA Georgia Southern University       
@@ -88,15 +90,27 @@ a:active {
           <td>Current &amp; Upcoming Exhibitions</td>
       </tr>
       <tr>
-        <td>Dec-Jan</td>
-        <td>Small Matters<br />
-        437Co Art Gallery, <br />
-        Colorado Mesa Univesrsity, 
-        Grand Junction, CO</td>
+        <td><br />
+          June 15 – August 9        </td>
+        <td>Brand 52: Annual National Juried Exhibition of Works on Paper<br />
+        Brand Library &amp; Art Center <br />
+        1601 West Mountain Street <br />
+        Glendale, CA 91201 <br /></td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+        <td>&nbsp;</td>
       </tr>
       <tr>
         <td>&nbsp;</td>
         <td>Select Shows and Awards:</td>
+      </tr>
+      <tr>
+        <td>2024</td>
+        <td height="23">Small Matters<br />
+437Co Art Gallery, <br />
+Colorado Mesa Univesrsity, 
+        Grand Junction, CO</td>
       </tr>
       <tr>
         <td>2023</td>
