--- a/list/funmoney.html
+++ b/list/funmoney.html
@@ -158,7 +158,7 @@
 
     <div class="grid-container">
         <div class="page-title">Fun Money</div>
-        <div class="navi-button"><a href="christmas.html"><img height='32px' src="christmas.png"></a> <a
+        <div class="navi-button"><a href="fuku-moni.html"><img height='32px' src="shirt.png"></a> <a
                 href="list3.html"><img src="list.png"></a> <a href="budget.html"><img src="budget.png"></a> <a
                 href="dice2.html"><img src="5.png"></a></div>
         <div class="mTitle" id='mTitle'>mikey</div>
